# precached

./: .clippy.toml  .gitignore  .gitlab-ci.yml  .rustfmt.toml  .travis.yml  Cargo.toml  Gemfile  OVERVIEW.md  README.md  TODO  _config.yml  blog.html  build.rs  index.html  index.md  installation.html  license.md  screenshots.html
_includes/: copyright.html  custom-head.html
_posts/: 2017-09-28-Hello-World.markdown  2017-09-28-Hello-World.md  2017-09-28-Prototype.markdown  2017-09-30-Looking-for-Contributions.markdown  2017-10-06-Status-Update-1.markdown  2017-10-11-Project-Logo.markdown  2017-10-21-Status-Update-2.markdown  2017-10-30-Benchmarks.markdown  2017-11-15-Status-Update-3.markdown  2017-12-03-Status-Update-4.markdown  2017-12-17-Status-Update-5.markdown  2018-01-01-Status-Update-6.markdown  2018-01-14-Status-Update-7.markdown  2018-01-15-Status-Update-7.markdown  2018-03-04-Version-1-0.markdown  2018-05-02-Version-1-1.markdown  2018-05-10-Status-Update-8.markdown  2018-05-25-Status-Update-9.markdown  2018-05-25-Version-1-2.markdown  2018-08-11-Version-1-3.markdown  2018-08-15-Project-News.markdown  2018-09-10-Version-1-3-1.markdown  2018-09-14-Version-1-3-2.markdown  2018-09-15-Status-Update-10.markdown  2018-09-15-Version-1-4-0.markdown  2019-02-05-Version-1-5-1.markdown  2019-02-16-Version-1-6-0.markdown  2019-06-29-Status-Update-11.markdown  2020-03-02-Version-1-7-2.markdown
_sections/: blog.html  home.html  index.html  installation.html  screenshots.html
assets/css/: style.scss
src/: config.rs  config_file.rs  constants.rs  dbus_interface.rs  events.rs  globals.rs  i18n.rs  inotify.rs  iotrace.rs  ipc.rs  main.rs  manager.rs  process.rs  procmon.rs  profiles.rs  rules.rs  state_file.rs  util.rs
src/dbus/: dbus_interface.rs  mod.rs
src/events/: internal_event.rs  mod.rs
src/hooks/: fanotify_logger.rs  forkbomb_detector.rs  ftrace_logger.rs  hook.rs  hook_manager.rs  hot_applications.rs  iotrace_prefetcher.rs  markov_prefetcher.rs  mod.rs  process_tracker.rs  ptrace_logger.rs  ptrace_prefetcher.rs  rule_hook.rs
src/i10n/: mod.rs
src/i18n/: mod.rs
src/inotify/: inotify_watches.rs  mod.rs
src/iotrace/: iotrace.rs  mod.rs
src/ipc/: ipc.rs  mod.rs
src/plugins/: dbus_interface.rs  dynamic_whitelist.rs  forkbomb_mitigation.rs  ftrace_messages.rs  hot_applications.rs  inotify_multiplexer.rs  introspection.rs  iotrace_log_cache.rs  iotrace_log_manager.rs  janitor.rs  markov_log_manager.rs  markov_prefetcher.rs  metrics.rs  mod.rs  notifications.rs  plugin.rs  plugin_manager.rs  profiles.rs  ptrace_log_manager.rs  rule_engine.rs  rule_event_bridge.rs  rule_event_proxy.rs  rule_plugin.rs  static_blacklist.rs  static_whitelist.rs  statistics.rs  system_agent.rs  thread_pool.rs  triggers.rs  user_session.rs  vfs_stat_cache.rs  web_frontend.rs  whitelist.rs
src/plugins/web/: mod.rs  server.rs
src/process/: mod.rs  prefault.rs  process.rs
src/procmon/: mod.rs  procmon.rs
src/procmon-sys/: Cargo.toml  build.rs
src/procmon-sys/src/: lib.rs
src/procmon_sys/: Cargo.toml  build.rs
src/procmon_sys/src/: lib.rs
src/profiles/: mod.rs  system_profile.rs
src/rules/: mod.rs  parser.rs  rules.rs
src/storage/: config_file.rs  mod.rs  state_file.rs
src/util/: daemon.rs  deref.rs  files.rs  ftrace.rs  iotrace.rs  logger.rs  mem.rs  memory.rs  mod.rs  mountinfo.rs  namespace.rs  notify.rs  ptrace.rs  sched.rs  system.rs  task_scheduler.rs  thread.rs  thread_pool.rs  trace_event.rs  tracer.rs  utmpx.rs  vec.rs
support/: precached.8  precached.conf  precached.conf.5  precached.service
support/appstream/: org.precache.precached-trigger.appdata.xml  org.precache.precached.appdata.xml
support/config/: log4rs.yaml  precached-devel.conf  precached.conf
support/config/examples/: README.md  precached-aggressive.conf  precached-devel.conf  precached-lowmem-dynonly.conf
support/dbus/: org.precached.precached1.conf
support/desktop/: precached-trigger.desktop  precached.desktop
support/examples/: PLUGINS.md  example_plugin.rs
support/i10n/de_DE/: messages.fluent
support/i10n/en_US/: messages.fluent
support/i18n/: de_AT.utf8  en_UK.UTF-8
support/i18n/de_DE/: messages.fluent
support/i18n/en_US/: messages.fluent
support/i18n/en_us/: messages.fluent
support/man/: iotracectl.1  iotracectl.8  precached-debug.8  precached-debugtool.8  precached-iotrace.1  precached-trigger.1  precached.8  precached.conf.5  precached.rules.5  precachedctl.8  precachedtop.1  precachedtop.8  rulesctl.8
support/pkg/: PKGBUILD  PKGBUILD-git  precached.spec
support/pkg/debian/: changelog  control  copyright  files  install  postinst.ex  postrm.ex  precached-git.dirs  precached-git.links  precached-git.manpages  precached-prime-caches.service  precached.dirs  precached.links  precached.manpages  precached.service  preinst.ex  prerm  prerm.ex  rules  watch
support/rules/: 10-cache-on-login.rules  99-ping-logger.rules  README
support/rules/examples/: cache-on-login.rules  log-fork-bombs.rule  log-fork-bombs.rules  ping-logger.rules
support/selinux/: precached.fc  precached.if  precached.pp  precached.sh  precached.te  precached_selinux.8  precached_selinux.spec  readme.md
support/shell/: gen-completions.sh
support/shell/completions/: iotracectl.bash-completion  iotracectl.fish-completion  iotracectl.powershell-completion  iotracectl.zsh-completion  precached-debugtool.bash-completion  precached-debugtool.fish-completion  precached-debugtool.powershell-completion  precached-debugtool.zsh-completion  precached-trigger.bash-completion  precached-trigger.fish-completion  precached-trigger.powershell-completion  precached-trigger.zsh-completion  precachedctl.bash-completion  precachedctl.fish-completion  precachedctl.powershell-completion  precachedctl.zsh-completion  precachedtop.bash-completion  precachedtop.fish-completion  (+5 more)
support/systemd/: precached-prime-caches.service  precached-prime-caches.timer  precached-trigger.service  precached-user.preset  precached.preset  precached.service
templates/: index.html.hbs
tests/: integration_tests.rs
(+38 files in other folders)
