[package]
edition = "2018"
name = "precached"
version = "1.7.0"
build = "build.rs"
authors = ["X3n0m0rph59 <x3n0m0rph59@gmail.com>"]
description = "A Linux process monitor and pre-caching daemon"
repository = "https://gitlab.com/X3n0m0rph59/precached"
homepage = "https://x3n0m0rph59.gitlab.io/precached/"
license = "GPLv3+"
readme = "README.md"

[features]
default = []
dev = ["clippy"]
web-frontend = ["warp", "handlebars", "tokio"]

[dependencies]
clippy = { version = "*", optional = true }
procmon-sys = { version = "0.0.2", path = 'src/procmon-sys' }
fanotify = { version = "*", git = "https://github.com/X3n0m0rph59/fanotify-rs", branch = "master" }
sys-info = { version = "*", git = "https://gitlab.com/X3n0m0rph59/sys-info-rs", branch = "master" }
threadpool = { version = "*", git = "https://gitlab.com/X3n0m0rph59/rust-threadpool", branch = "master" }
zmq = { version = "*", git = "https://gitlab.com/X3n0m0rph59/rust-zmq", branch = "master" }
# sys-info = { version = "*", path = "vendor/sys-info" }
# threadpool = { version = "*", path = "vendor/threadpool" }
# zmq = { version = "*", path = "vendor/zmq" }
chrono = { version = "0.4.7", features = ["serde", "rustc-serialize"] }
chrono-tz = { version = "0.5.1", features = ["serde"] }
crossbeam = "0.7.1"
rayon = "1.1.0"
indexmap = "1.0.2"
time = "0.1.42"
systemstat = "0.1.4"
users = "0.9.1"
term_size = "1.0.0-beta1"
libc = "0.2.58"
nix = "0.14.1"
num_cpus = "1.10.1"
log = "0.4.6"
log4rs = "0.8.3"
log4rs-syslog = "3.0.3"
log-panics = "2.0.0"
syslog = "4.0.1"
pretty_env_logger = "0.3.0"
ansi_term = "0.11.0"
lazy_static = "1.3.0"
enum_primitive = "0.1.1"
regex = "1.1.7"
fnv = "1.0.6"
globset = "0.4.4"
byteorder = "1.3.2"
bytevec = "0.2.0"
toml = "0.5.1"
clap = "2.33.0"
serde = "1.0.94"
serde_derive = "1.0.94"
serde_json = "1.0.40"
zstd = "0.4.24"
tui = "0.6.1"
termion = "1.5.3"
term = "0.5.2"
pbr = "1.0.1"
prettytable-rs = "0.8.0"
daemonize = "0.4.1"
inotify = "0.7.0"
fluent = "0.6.0"
fluent-bundle = "0.6.0"
failure = "0.1.5"
failure_derive = "0.1.5"
futures = "0.1.28"
tokio = { version = "0.1.21", optional = true }
warp = { version = "0.1.16", optional = true }
handlebars = { version = "2.0.0-beta.1", optional = true }

# [replace]
# sys-info = { version = "*", path = "vendor/" }
# threadpool = { version = "*", path = "vendor/" }
# zmq = { version = "*", path = "vendor/" }

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 8
panic = 'unwind'

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'

[[bin]]
name = "precached"
path = "src/main.rs"
# build = "build.rs"

[[bin]]
name = "precachedctl"
path = "src/bin/precachedctl/src/main.rs"
# build = "src/bin/precachedctl/build.rs"

[[bin]]
name = "iotracectl"
path = "src/bin/iotracectl/src/main.rs"
# build = "src/bin/iotracectl/build.rs"

[[bin]]
name = "precachedtop"
path = "src/bin/precachedtop/src/main.rs"
# build = "src/bin/precachedtop/build.rs"

[[bin]]
name = "rulesctl"
path = "src/bin/rulesctl/src/main.rs"
# build = "src/bin/rulesctl/build.rs"

[[bin]]
name = "precached-trigger"
path = "src/bin/precached-trigger/src/main.rs"
# build = "src/bin/precached-trigger/build.rs"

[[bin]]
name = "precached-debug"
path = "src/bin/precached-debug/src/main.rs"
# build = "src/bin/precached-debug/build.rs"